# keel-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  keel-telegram-bot_example.yaml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dockerimage-latest.yml  dockerimage-release.yml  dockerimage.yml  python_package.yml  python_publish.yml  release_drafter.yml  update_docker_description.yml
keel_telegram_bot/: api_client.py  bot.py  config.py  const.py  main.py  permissions.py  reply_keyboard_handler.py  stats.py  util.py  webserver.py
keel_telegram_bot/bot/: __init__.py  permissions.py  reply_keyboard_handler.py
keel_telegram_bot/client/: __init__.py  api_client.py  approval.py  daily_stats.py  k8s_status.py  resource.py  tracked_image.py  types.py
keel_telegram_bot/monitoring/: __init__.py  monitor.py
tests/: __init__.py  test_bot.py  test_dummy.py  webhook_body.json
tests/client/demo_requests/: resources.json  tracked-images.json
tests/monitoring/: test_worker.py
tests/test_monitoring/: test_worker.py
